--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,11 +1,38 @@
-
 <ng-container>
-  <section>
-    <router-outlet>
-      <app-home> </app-home>
-    </router-outlet>
-  </section>
-  <div class="footer">
-    <h3>powered by Pobeda team</h3>
+  <header class="header">
+    <div class="header-item">
+      <button (click)="toggleMenu()" class="btn menu-toggle">
+        <div class="burger" [ngClass]="{'open': menuOpen, 'light': !enabled, 'dark': enabled}"></div>
+      </button>
+      <a href="" class="logo" [ngClass]="enabled ? 'link-light' : 'link-dark'">ZumBumTube</a>
+    </div>
+
+    <input type="text" placeholder="Поиск..." class="search-bar"
+      [ngClass]="enabled ? 'search-light' : 'search-dark'" />
+    <button (click)="changeTheme()" class="btn theme-toggle"
+      [ngClass]="enabled ? 'btn-light-theme' : 'btn-dark-theme'">
+      <img [src]="enabled ? './assets/img/light.svg' : './assets/img/dark.svg'" alt="Switch Theme"
+        class="theme-icon" />
+    </button>
+  </header>
+
+  <div class="layout">
+    <nav [ngClass]="{'menu-open': menuOpen, 'light': !enabled, 'dark': enabled}" class="side-menu">
+      <div class="list-container">
+      <mat-list *ngFor="let link of list">
+        <img class="list-icon" [src]="'../assets/img/menu/' + link.png + '.png'" alt="">
+        <mat-list-item role="listitem">
+            <a matListItemTitle [class.active]="link.isActive" [routerLink]="link.url" class="text">
+               {{ link.name }}
+            </a>
+        </mat-list-item>
+      </mat-list>
+    </div>
+    </nav>
+
+    <section [ngClass]="{'content': true, 'content-light': !enabled, 'content-dark': enabled, 'content-extended': !menuOpen}">
+      <router-outlet>
+      </router-outlet>
+    </section>
   </div>
 </ng-container>
