--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../resources/styles/themes/default.css';
+@import '../resources/styles/themes/dark.css';
+@import '../resources/styles/base.css';
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -6,7 +10,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 section {
     display: flex;
-    width: 1170px;
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
